<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:clickable="true"
    tools:context=".ProfileActivity"
    android:focusable="true">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/form_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:clickable="true"
        android:contentDescription="@string/adds_form"
        android:focusable="true"
        android:src="@android:drawable/ic_input_add"
        app:backgroundTint="@color/red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="200dp"
        android:layout_marginBottom="300dp"
        app:layout_constraintBottom_toTopOf="@+id/form_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="10dp"
        android:stretchColumns="1">

        <TableRow
            android:id="@+id/table_head"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/table_head_date"
                android:gravity="left"
                android:text="@string/text_date" />

            <TextView
                android:id="@+id/table_head_category"
                android:gravity="center"
                android:text="@string/text_category" />

            <TextView
                android:id="@+id/table_head_euro"
                android:gravity="right"
                android:text="@string/text_euro" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>